# omega-super-ai

./: .env.example  .gitignore  72_HOUR_LAUNCH_PLAN.md  CONFIG.md  Dockerfile  LAUNCH_CHECKLIST.md  Makefile  PRE_LAUNCH_FIXES.md  PUSH_REMAINING.md  PUSH_REMAINING_v24.3.md  README.md  VERSION_AUDIT.md  api_server.part1.py  api_server.part2.py  api_server.py  check_patch.py  cli.py  core_brain.py  docker-compose.yml  error_repair.py  fix_line_2311.py  fix_visual_surgical.py  install_tax_data.py  memory_manager.py  nginx.conf  omega.py  omega_ai.part1.py  omega_ai.part2.py  omega_ai.py  patch_visual.py  pedagogical_engine.py  push_large_file.py  push_parts.py  push_to_github.py  push_to_github_v24.py  push_training_windows.py  pyproject.toml  reassemble_v37.py  reconstruct_from_parts.py  reconstruct_security.py  (+10 more)
.github/: README.md
backend/: .push_test  __init__.py  accessibility_deaf.py  agents.py  agricultural_advisor.py  ai_engine.py  alert_system.py  animation_engine.py  auto_upgrader.py  automotive.py  autonomous_system.py  background_tasks.py  branding.py  business_advisor.py  cache_manager.py  captainship.py  chat.py  cognitive_engine.py  companionship.py  config.py  config_validator.py  dashboard.py  data_portability.py  data_portability_fix.py  db_utils.py  dead_mans_switch.py  developer.py  education_system.py  email_alerts.py  email_system.py  exception_handler.py  files.py  financial.py  github_integration.py  government_services_fix.py  health_monitor.py  health_system.py  healthcare_assistant.py  images.py  jarvis_agent.py  (+57 more)
chunks_security/: it_security_training.py.part000.txt  manifest.json  manifest_parts.json
chunks_to_push/: backend_netai_training.py.part003  manifest.json  merge_files.py  web_index.html.part001
docs/: CNAME  index.html
omega/: __init__.py  companion.py  config.py  content_extractor.py  critical_thinker.py  database.py  domain_experts.py  financial_advisor.py  omega.py  opportunities.py  research_swarm.py  scam_guard.py  search_engines.py  tax_module.py  td0.py  td1.py  td2.py  td3.py  td4.py  td5.py  td6.py  td7.py  td8.py  td9.py  utils.py
tools/: test.txt
training_parts/: digital_wellness_part1.py  digital_wellness_part1.py.chunk000  digital_wellness_part1.py.chunk001  digital_wellness_part1.py.chunk002  digital_wellness_part1.py.chunk003  digital_wellness_part1.py.chunk004  digital_wellness_part1.py.chunk005  digital_wellness_part1.py.chunk006  digital_wellness_part1.py.chunk007  digital_wellness_part1.py.chunk008  digital_wellness_part1.py.chunk009  digital_wellness_part1.py.chunk010  digital_wellness_part1.py.chunk011  digital_wellness_part1.py.manifest  digital_wellness_part2.py  digital_wellness_part2.py.chunk000  digital_wellness_part2.py.chunk001  digital_wellness_part2.py.chunk002  digital_wellness_part2.py.chunk003  digital_wellness_part2.py.chunk004  digital_wellness_part2.py.chunk005  digital_wellness_part2.py.chunk006  digital_wellness_part2.py.chunk007  digital_wellness_part2.py.chunk008  digital_wellness_part2.py.chunk009  digital_wellness_part2.py.chunk010  digital_wellness_part2.py.manifest  it_security_training_part1.py  it_security_training_part1.py.chunk000  it_security_training_part1.py.chunk001  it_security_training_part1.py.chunk002  it_security_training_part1.py.chunk003  it_security_training_part1.py.chunk004  it_security_training_part1.py.chunk005  it_security_training_part1.py.manifest  (+43 more)
(+98 files in other folders)
