[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luqi-ai"
version = "24.0.0"
description = "World-class AI SaaS platform serving Africa and the world"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Luqi AI Team", email = "support@luqi-ai.com"},
]
keywords = ["ai", "africa", "saas", "api", "fastapi", "education", "training"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "stripe>=8.0.0",
    "pillow>=10.2.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
]
lint = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "bandit>=1.7.7",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
]
all = [
    "luqi-ai[dev,lint,test]",
]

[project.scripts]
luqi-server = "server:main"
luqi-cli = "cli:main"

[project.urls]
Homepage = "https://luqi-ai.com"
Repository = "https://github.com/ttmodupe-hash/omega-super-ai"
Documentation = "https://docs.luqi-ai.com"
"Bug Tracker" = "https://github.com/ttmodupe-hash/omega-super-ai/issues"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM", "PTH", "ERA", "PL", "PERF", "RUF",
]
ignore = ["D100", "D104", "D203", "D212", "PLR2004"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"backend/test_*.py" = ["D", "S", "PLR2004"]
"tests/**/*.py" = ["D", "S", "PLR2004"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["backend"]
omit = ["backend/test_*.py", "backend/**/test_*.py"]

[tool.coverage.report]
precision = 2
fail_under = 70
skip_covered = false
show_missing = true

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.bandit]
exclude_dirs = ["tests", "backend/test_*"]
skips = ["B101", "B311"]
